test/razor.test.views/errors/errorReadingView.raz
<h1>partialViewNotFound.raz</h1>
<div>
    <!--[#2.3.1]-->
    @Html.partial("./_partial.raz")
</div>